# anonymizer

./: .gitignore  CMakeLists.txt  PIPELINE.md  README.md  REPORT.md  Rozprava.md  create_script.sql  create_with_multiple_tables.sql  create_with_single_table.sql  docker-compose.yml
docker/http-log-kafka-producer/: Dockerfile
src/: main.cpp
src/application/: Application.cpp  Application.hpp
src/database/: DBManager.cpp  DBManager.hpp
src/message-pipeline/: MessageCacher.cpp  MessageCacher.hpp  MessageConsumer.cpp  MessageConsumer.hpp  MessageTransformer.cpp  MessageTransformer.hpp  PeriodicDecoder.cpp  PeriodicDecoder.hpp  PeriodicSender.cpp  PeriodicSender.hpp
src/util/: AsyncFileManager.cpp  AsyncFileManager.hpp  AsyncQueue.hpp  MessageWrapper.cpp  MessageWrapper.hpp
